// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gui/redux/props reducer should convert gui values to props values 1`] = `
Object {
  "array": Array [
    Object {
      "name": "foo",
      "type": "string",
      "value": "bar",
    },
  ],
  "data": Object {
    "foo": Object {
      "name": "foo",
      "type": "string",
      "value": "bar",
    },
  },
  "initialized": true,
  "keys": Array [
    "foo",
  ],
}
`;

exports[`gui/redux/props reducer should transform SET_DOCGEN to SET_PROPS action 1`] = `
Object {
  "array": Array [
    Object {
      "name": "foo",
      "value": "foo",
    },
  ],
  "data": Object {
    "foo": Object {
      "name": "foo",
      "value": "foo",
    },
  },
  "initialized": true,
  "keys": Array [
    "foo",
  ],
}
`;
